# echo-ultimate

./: .gitignore  Dockerfile  Dockerfile.train  ECHO_Training.ipynb  README.md  app.py  asgi.py  client.py  config.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run.py  space_requirements.txt  train_entrypoint.py
core/: __init__.py  baseline.py  epistemic_fingerprint.py  graders.py  metrics.py  tasks.py
data/: tasks_cache.json
env/: echo_env.py  parser.py  reward.py  self_consistency.py  task_bank.py
scripts/: colab_real_eval.py  download_tasks.py  eval_cell1_baseline.py  eval_cell2_trained.py  eval_v3_final.py  gen_plots.py  generate_plots.py  publish_echobench.py  publish_space.py  run_baseline.py
server/: app.py
training/: adversarial.py  curriculum.py  dataset.py  evaluate.py  train.py
ui/: app.py
